# Konto-Kompass

./: .env.example  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  docker-entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py
api/app/: auth.py  celery_client.py  crypto.py  db.py  imports.py  main.py  models.py  routes.py  schemas.py  services.py  settings.py
tests/: test_compute.py  test_crypto.py  test_csv_balance.py  test_csv_trade_republic.py
ui/: Dockerfile  pyproject.toml
ui/app/: streamlit_app.py
worker/: Dockerfile  pyproject.toml
worker/app/: celery_app.py  compute.py  crypto.py  db.py  tasks.py
worker/app/connectors/: base.py  csv_import.py  csv_trade_republic.py  gocardless.py  manual.py  wealthapi.py
