[project]
name = "konto-kompass-api"
version = "0.1.0"
dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.34.0",
  "SQLAlchemy==2.0.32",
  "psycopg[binary]==3.2.1",
  "pydantic==2.10.6",
  "pydantic[email]==2.10.6",
  "alembic==1.14.1",
  "passlib[bcrypt]==1.7.4",
  "python-jose[cryptography]==3.3.0",
  "cryptography==44.0.0",
  "python-multipart==0.0.20",
  "celery[redis]==5.4.0",
  "konto-models",
  "konto-connectors",
]

[tool.setuptools.packages.find]
where = ["app"]

[tool.setuptools]
package-dir = {"" = "."}
